# sahou

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  RELEASING.md  ROADMAP.md  dist-workspace.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  crates-release.yml  docs.yml  npm-release.yml  python-release.yml  release.yml  ts-tests.yml
cli/: Cargo.toml  README.md  about.hbs  about.toml
cli/gui-dist/: index.html
cli/gui-dist/assets/: index-BFQPZEIx.css  index-C9J2zZnm.js  index-DMD5UCbS.js  index-KOG1s_hO.js  sahou_core_bg-5J_V0XbC.wasm  sahou_core_bg-DexzjJNm.wasm  sahou_core_bg-RKWNaaaE.wasm
cli/licenses/: THIRD-PARTY-LICENSES.md
cli/src/: check.rs  doctor.rs  doctor_lan.rs  gui.rs  init.rs  link.rs  main.rs  reference.rs  style.rs  tap.rs
cli/src/gui/: files.rs  serve.rs
cli/tests/: check.rs  cli.rs  doctor.rs  doctor_lan.rs  init.rs  licenses.rs  stub_freshness.rs  tap.rs
core/: Cargo.toml  README.md  cbindgen.toml  sahou.h
core/src/: cffi.rs  compat.rs  contract.rs  diag.rs  endpoints.rs  ffi.rs  fmt.rs  ir.rs  lib.rs  parse.rs  payload.rs  python.rs  runtime.rs  sample.rs  schema_check.rs  stub.rs  typespec.rs  vitals.rs  wasm.rs
core/tests/: cffi.rs  compat.rs  endpoints.rs  ir.rs  parse.rs  parse_roundtrip.rs  payload.rs  runtime_boundary.rs  runtime_handshake.rs  runtime_plan.rs  runtime_query.rs  runtime_wasm_abi.rs  sample.rs  schema_check.rs  stub.rs  vitals.rs  wasm_abi.rs
docs/: book.toml
docs/po/: ja.po  messages.pot
docs/src/: SUMMARY.md  cli-reference.md  faq.md  gui.md  introduction.md  networking-and-deployment.md  quickstart.md  schema-authoring.md
docs/src/concepts/: contract-evolution.md  contract-vs-endpoints.md  index.md  ir-and-round-trip.md  node-message-connection.md  say-no-early.md
docs/src/runtimes/: index.md  python.md  rust.md  touchdesigner.md  typescript.md
docs/theme/: head.hbs  lang-switcher.css  lang-switcher.js
examples/demo/: endpoints.dev.yaml  schema.sahou.yaml
examples/demo/runtime/: README.md  node_state.mjs  node_sub.mjs  package-lock.json  package.json  py_pub.py
examples/demo/runtime/browser/: index.html  main.mjs  package-lock.json  package.json  sahou.gen.d.mts  sahou.gen.mjs  vite.config.mjs
gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
gui/scripts/: build-core.cjs  post-build.cjs
gui/src/: App.vue  api.ts  core-bridge.ts  layout.ts  main.ts  store.ts  style.css
gui/src/edits/: contract-edits.ts  diff.ts  endpoints-edits.ts
gui/src/graph/: build-data.ts  edge-style.ts  theme.ts  use-graph.ts
gui/src/panes/: AddConnectionDialog.vue  AddNodeDialog.vue  BaseDialog.vue  ConflictDialog.vue  ConnRow.vue  ConnectionPane.vue  DeployPane.vue  DiagPane.vue  FieldsTable.vue  NodePane.vue  ShapeEditor.vue  TableView.vue  diag-target.ts
gui/src/table/: sheet-model.ts
gui/tests/: App.spec.ts  api-watch.test.ts  app-ux.test.ts  app.test.ts  build-data.test.ts  contract-edits.test.ts  core-bridge.test.ts  dialogs.test.ts  layout.test.ts  panes.test.ts  sheet-model.test.ts  store.test.ts  table-sheets.test.ts
runtime/: Cargo.toml
runtime/src/: lib.rs
runtimes/py/: pyproject.toml
runtimes/py/tests/: test_handshake.py  test_pubsub.py  test_stub_typecheck.py
runtimes/py/tests/fixtures/: base.sahou.yaml  descriptor_additive.json  descriptor_base.json
runtimes/py/tests/typestub/: stub_bad.py
runtimes/python/: README.md  pyproject.toml
runtimes/python/python/sahou/: __init__.py  _diag.py  _engine.py
runtimes/python/tests/: conftest.py  test_query.py  test_smoke.py  test_stub_typecheck.py  test_vitals.py
runtimes/python/tests/fixtures/: additive.sahou.yaml  breaking.sahou.yaml  descriptor_breaking.json
runtimes/python/tests/typestub/: all_bad.py  all_ok.py  stub_ok.py
runtimes/rust/: README.md
runtimes/touchdesigner/: INSTALL.txt  README.md
runtimes/touchdesigner/examples/: schema.sahou.yaml
runtimes/touchdesigner/macos/: Info.plist
runtimes/touchdesigner/macos/SahouOut.xcodeproj/: project.pbxproj
runtimes/touchdesigner/src/: SahouInCHOP.cpp  SahouInCHOP.h  SahouOutCHOP.cpp  SahouOutCHOP.h  envelope.h  outcome.cpp  outcome.h  payload.cpp
runtimes/touchdesigner/test/: envelope_test.cpp  ffi_in_smoke.cpp  ffi_smoke.cpp  outcome_test.cpp  payload_test.cpp  run.sh
runtimes/touchdesigner/transport/: Cargo.toml  sahou_transport.h
runtimes/touchdesigner/transport/src/: lib.rs
runtimes/touchdesigner/windows/: CMakeLists.txt  INSTALL.txt  README.md
runtimes/ts/: .gitignore  .npmignore  README.md  package-lock.json  package.json  vitest.config.ts
runtimes/ts/src/: core.ts  engine.ts
runtimes/ts/tests/: cross.test.ts  link.test.ts  pubsub.test.ts
runtimes/ts/tests/cross/: abi_dump.py
runtimes/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
runtimes/typescript/src/: browser.ts  core-browser.ts  core-node.ts  core.ts  diag.ts  engine.ts  node.ts  session.ts  version.ts
runtimes/typescript/tests/: cross.test.ts  entry.test.ts  handshake.test.ts  helpers.ts  link.test.ts  pubsub.test.ts  query.test.ts  setup.ts  smoke.test.ts  typestub.test.ts  version.test.ts  vitals.test.ts
runtimes/typescript/tests-e2e/: browser-vitals.e2e.test.ts  server.ts  vite.config.ts
runtimes/typescript/tests-e2e/fixture/: index.html  main.ts
runtimes/typescript/tests/cross/: abi_dump.py  py_pub.py
runtimes/typescript/tests/typestub/: all_bad.mts  all_ok.mts  stub_bad.mts  stub_ok.mts
td/: .gitignore  README.md
td/macos/SahouOut.xcodeproj/: project.pbxproj
td/src/: SahouOutCHOP.cpp  envelope.cpp  payload.h
td/test/: envelope_test.cpp  payload_test.cpp  run.sh
td/transport/src/: lib.rs
