[package]
name = "sahou-cli"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "sahou"
path = "src/main.rs"

[dependencies]
sahou-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
zenoh = { version = "1.9", features = ["unstable", "internal", "plugins"] }
zenoh-plugin-remote-api = { version = "1.9", default-features = false }
zenoh-plugin-trait = "1.9"
netstat2 = "0.11.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tiny_http = "0.12"
rust-embed = "8"
notify = "8"
serde_json = "1"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
ureq = { version = "2", features = ["json"] }
