[package]
name = "sahou-cli"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "Sahou CLI (sahou) — a schema-first tool for building the interface layer between systems on a LAN."
repository = "https://github.com/craf-te/sahou"
homepage = "https://github.com/craf-te/sahou"
readme = "README.md"
keywords = ["schema", "cli", "messaging", "zenoh", "lan"]
categories = ["command-line-utilities", "network-programming"]
include = [
    "src/**/*",
    "gui-dist/**/*",
    "about.hbs",
    "about.toml",
    "licenses/**/*",
    "README.md",
]

[[bin]]
name = "sahou"
path = "src/main.rs"

[dependencies]
sahou-core = { path = "../core", version = "0.0.2" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
zenoh = { version = "1.9", features = ["unstable", "internal", "plugins"] }
zenoh-plugin-remote-api = { version = "1.9", default-features = false }
zenoh-plugin-trait = "1.9"
netstat2 = "0.11.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tiny_http = { version = "0.12", optional = true }
rust-embed = { version = "8", optional = true }
notify = { version = "8", optional = true }
serde_json = "1"
libc = "0.2"
# Pinned to the same version zenoh-plugin-remote-api pulls in (via tokio-tungstenite), so this
# doesn't introduce a duplicate tungstenite version in the tree. Default features are already
# minimal (just the plain handshake codec; no TLS), which is all a ws:// client probe needs.
tungstenite = "0.27.0"
# Terminal styling. Both are already in the tree via clap's `color` feature;
# anstream strips styles automatically on non-TTY output and under NO_COLOR.
anstream = "1"
anstyle = "1"

[features]
default = ["gui"]
gui = ["dep:rust-embed", "dep:tiny_http", "dep:notify"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
ureq = { version = "2", features = ["json"] }
