[package]
name = "sahou-core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Sahou core — the schema-first IR: parse, serialize, and validate a contract, and judge compatibility."
repository = "https://github.com/craf-te/sahou"
homepage = "https://github.com/craf-te/sahou"
readme = "README.md"
keywords = ["schema", "ir", "validation", "messaging", "contract"]
categories = ["encoding", "parser-implementations"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
# C ABI for C++/Go/TouchDesigner (cbindgen emits sahou.h; std-only, no extra deps).
capi = []
wasm = ["dep:wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml (dtolnay) is archived → adopt a maintained fork (spec §11.1)
serde_norway = "0.9"
serde_path_to_error = "0.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
wasm-bindgen = { version = "0.2", optional = true }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"], optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"
